change profile, update README

--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -1,5 +1,7 @@
 spring:
+  application:
+    name: product-pricing-service
   datasource:
-    username: postgres
-    password: mysecretpassword
-    url: jdbc:tc:postgresql:latest:///
+    url: jdbc:postgresql://${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}
+    username: ${DATABASE_USERNAME}
+    password: ${DATABASE_PASSWORD}
